Lzy terminal now works